fix bugs; update design to add scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,25 @@ button{
     outline: none !important;
   }
 }
+
+.p-nav-small .p-nav-item-text {
+  position: absolute;
+  visibility: hidden;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: 10px;
+}
